<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vimo.kivubox.www.vimo.ResetPassword"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A reset password link will be sent to this email adress"
        android:textAlignment="center"
        android:padding="8dp"
        android:textSize="17sp"/>


    <!--EMAIL-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingBottom="15dp"
            android:layout_marginBottom="3dp"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textSize="15sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_me_the_link"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>
