<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vimo.kivubox.www.vimo.SignUp"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:scrollbarSize="1dp"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/title"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/vimo_sign_up"
                    android:scaleType="centerCrop"
                    android:scrollY="-27dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/form"
                android:layout_below="@id/title"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:focusableInTouchMode="true">

                <!--FIRST NAME-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:paddingBottom="15dp"
                        android:layout_marginBottom="3dp"
                        android:inputType="textPersonName"
                        android:maxLength="40"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>

                <!--LAST NAME-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:paddingBottom="15dp"
                        android:layout_marginBottom="3dp"
                        android:maxLength="40"
                        android:inputType="textPersonName"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>

                <!--EMAIL-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:paddingBottom="15dp"
                        android:layout_marginBottom="3dp"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>

                <!--PASSWORD-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="15dp"
                        android:layout_marginBottom="3dp"
                        android:maxLength="100"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>

                <!--PASSWORD-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingBottom="15dp"
                        android:maxLength="100"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/form"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardElevation="2dp"
                    android:background="@drawable/red_btn"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <Button
                        android:id="@+id/signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textStyle="bold"
                        android:background="@drawable/red_btn"
                        android:textColor="@color/colorWhite"
                        />

                </android.support.v7.widget.CardView>



                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/signWithGoogle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorWhite"
                            />

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:padding="10dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="1dp"
                            app:cardBackgroundColor="@color/facebookBlue"
                            app:cardElevation="3dp">

                            <com.facebook.login.widget.LoginButton
                                android:id="@+id/login_button"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                />

                        </android.support.v7.widget.CardView>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textColor="#414141"/>

                    <TextView
                        android:id="@+id/toLogin"
                        android:textSize="17sp"
                        android:paddingLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</LinearLayout>
