<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vimo.kivubox.www.vimo.LogIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <ScrollView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:scrollbarSize="1dp"
        android:padding="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/form"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:id="@+id/title"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/vimo2"
                        android:scaleType="centerCrop"
                        android:scrollY="-20dp"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:layout_marginBottom="20dp"/>

                </LinearLayout>


                <!--EMAIL-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:paddingBottom="15dp"
                        android:layout_marginBottom="3dp"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>

                <!--PASSWORD-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="15dp"
                        android:layout_marginBottom="3dp"
                        android:maxLength="100"
                        android:textSize="15sp"/>

                </android.support.design.widget.TextInputLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/form"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardElevation="2dp"
                    android:background="@drawable/red_btn"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in"
                        android:textStyle="bold"
                        android:background="@drawable/red_btn"
                        android:textColor="@color/colorWhite"
                        />

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/resetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="13sp"
                    android:textAlignment="textEnd"
                    android:padding="5dp"
                    android:textColor="#414141"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/signWithGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="10dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="1dp"
                    app:cardBackgroundColor="@color/facebookBlue"
                    app:cardElevation="3dp">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />

                </android.support.v7.widget.CardView>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="#414141"/>

                    <TextView
                        android:id="@+id/toSignup"
                        android:textSize="17sp"
                        android:paddingLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
